# advent_of_code_2025

./: .gitignore  Cargo.toml  README.md
day00/: Cargo.toml  README.md  input.txt
day00/src/: main.rs
day01/: README.md
day01/src/: main.rs
day02/: README.md
day02/src/: main.rs
day03/: README.md
day03/src/: main.rs
day04/: README.md
day04/src/: main.rs
day05/: README.md
day05/src/: main.rs
day06/: README.md  input-smaller.txt
day06/src/: main.rs
day07/: README.md
day07/src/: main.rs
day08/: README.md
day08/src/: main.rs
day09/: Cargo.toml  README.md
day09/src/: main.rs
day10/: Cargo.toml  README.md
day10/src/: main.rs  running_machine.rs  simple_machine.rs
day11/: Cargo.toml  README.md  base.dotfile
day11/src/: main.rs
day12/: README.md
day12/src/: main.rs
