[workspace]
resolver = "3"
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["gippy"]

[workspace.dependencies]
# Common dependencies that can be shared across all days
